gestion des button fixe sur le dark mode

--- a/styles/elementFixe.scss
+++ b/styles/elementFixe.scss
@@ -35,42 +35,42 @@
     font-size: 30px;
     cursor: pointer;
   }
-  svg{
+  svg {
     width: 50px;
     height: 50px;
     border: 2px solid $purple;
     border-radius: 50%;
     padding: 0.5rem;
   }
-  h2{
+  h2 {
     text-align: center;
-    font-family: 'Parisienne', cursive;
+    font-family: "Parisienne", cursive;
     font-size: 30px;
     color: $white;
     margin: 0.5rem 0;
   }
-  h3{
+  h3 {
     margin-top: 1rem;
   }
-  ul{
+  ul {
     margin-left: 1rem;
-    li{
+    li {
       text-align: left;
-      .don-paypal{
+      .don-paypal {
         color: $primary;
-        &:hover{
+        &:hover {
           text-decoration: underline;
         }
       }
-      .don-patreon{
+      .don-patreon {
         color: $warning;
-        &:hover{
+        &:hover {
           text-decoration: underline;
         }
       }
-      .don-youtube{
+      .don-youtube {
         color: $danger;
-        &:hover{
+        &:hover {
           text-decoration: underline;
         }
       }
@@ -106,18 +106,6 @@
   & ion-icon:nth-child(2) {
     display: none;
   }
-  &.active {
-    background: $white;
-    border: 2px solid $success;
-    box-shadow: 0 2px 10px rgba($success, $alpha: 0.5);
-  }
-  &.active ion-icon:nth-child(2) {
-    display: block;
-    color: $success;
-  }
-  &.active ion-icon:nth-child(1) {
-    display: none;
-  }
 }
 
 .arrow {
@@ -138,15 +126,6 @@
   opacity: 0;
   ion-icon {
     color: $cyan;
-  }
-}
-
-.arrow.active {
-  border: 2px solid $primary;
-  background: $gray-dark;
-  box-shadow: 0 2px 10px rgba($default, $alpha: 0.5);
-  & ion-icon {
-    color: $primary;
   }
 }
 
@@ -202,20 +181,43 @@
       transition: 0.3s ease;
     }
   }
-  &.active {
-    background: $white;
-    div {
-      &::before {
-        background: $white;
-      }
-    }
-  }
   &:hover {
     opacity: 0.8;
     div {
       &::before {
         transform: translateY(0);
         opacity: 1;
+      }
+    }
+  }
+}
+
+body.dark-mode {
+  .toggle-mode {
+    background: $white;
+    border: 2px solid $success;
+    box-shadow: 0 2px 10px rgba($success, $alpha: 0.5);
+    ion-icon:nth-child(2) {
+      display: block;
+      color: $success;
+    }
+    ion-icon:nth-child(1) {
+      display: none;
+    }
+  }
+  .arrow {
+    border: 2px solid $primary;
+    background: $gray-dark;
+    box-shadow: 0 2px 10px rgba($default, $alpha: 0.5);
+    & ion-icon {
+      color: $primary;
+    }
+  }
+  .don {
+    background: $white;
+    div {
+      &::before {
+        background: $white;
       }
     }
   }
